--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,2 @@
 RewriteEngine on
-RewriteRule edl/([\w-]+)(?:/([\w-]+))?$ /edl.php?vendor=$1&service=$2 [L]
+RewriteRule edl/([\w-]+)(?:/([\w-]+))?$ edl.php?vendor=$1&service=$2 [L]
